<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activity.RegistrationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="0dp"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_registration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorExtras"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/registration_name"
        style="@style/login_style"
        android:background="#fff"
        android:drawableStart="@drawable/ic_profile"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:maxLines="1" />

    <EditText
        android:id="@+id/registration_email"
        style="@style/login_style"
        android:background="#fff"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:maxLines="1" />

    <EditText
        android:id="@+id/registration_mobile_number"
        style="@style/login_style"
        android:background="#fff"
        android:drawableStart="@drawable/ic_mobile"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/registration_address"
        style="@style/login_style"
        android:background="#fff"
        android:drawableStart="@drawable/ic_address"
        android:hint="@string/delivery_address"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/registration_password"
        style="@style/login_style"
        android:background="#fff"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password_registration"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/registration_confirm_password"
        style="@style/login_style"
        android:background="#fff"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/registration_btn"
        style="@style/login_style"
        android:layout_marginTop="40dp"
        android:background="@color/colorExtras"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>