<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="54dp"
        android:layout_marginBottom="54dp"
        android:gravity="center"
        style="@style/login_style"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="Enter the received OTP" />

    <EditText
        android:id="@+id/reset_otp"
        style="@style/login_style"
        android:hint="@string/otp"
        android:inputType="number"
        android:background="@color/white"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reset_password"
        style="@style/login_style"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password_registration"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/reset_confirm_password"
        android:background="@color/white"
        style="@style/login_style"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/reset_btn_submit"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/colorExtras"
        android:textColor="@color/white"
        android:text="@string/submit"
        style="@style/login_style" />

</LinearLayout>